[project]
name = "bsm-app"
version = "0.1.0"
description = "Streamlit App to showcase BSM Options Pricer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "yfinance>=0.2.65",
]
